atualiza api
