# React/sprint-2-api/Event+/webapi.event+/Controllers/UsuarioController.cs
@@ -33,5 +33,19 @@ namespace webapi.event_.Controllers
             }
         }
 
+        [HttpGet("{id}")]
+        public IActionResult GetById(Guid id)
+        {
+            try
+            {
+                return Ok(_usuarioRepository.BuscarPorId(id));
+            }
+            catch (Exception e)
+            {
+
+                return BadRequest(e.Message);
+            }
+        }
+
     }
 }          
